# Omni_Robot

./: .gitignore  CMakeLists.txt  README.md  STM32G491RETX_FLASH.ld  arm-none-eabi-gcc.cmake
Core/: CMakeLists.txt
Core/Inc/: dac.h  main.h  opamp.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: dac.c  gpio.c  main.c  opamp.c  stm32g4xx_it.c  tim.c  usart.c
Drivers/: CMakeLists.txt
Drivers/STM32G4xx_HAL_Driver/: stm32g4xx_hal_conf.h
User/: CMakeLists.txt
User/App/: CMakeLists.txt
User/App/Inc/: Factory.h  OmniApp.h  Omni_c_interface.h
User/App/Src/: Factory.cpp  OmniApp.cpp
User/Test/: CMakeLists.txt
User/Test/HIL/: CMakeLists.txt
User/Test/HIL/Inc/: tests.h
User/Test/HIL/Src/: tests.cpp
